[package]
name = "subway"
version = "0.1.0"
authors = ["Acala Developers <hello@acala.network>"]
repository = "https://github.com/AcalaNetwork/subway"
description = "Substrate JSON RPC gateway"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "subway"
path = "src/lib.rs"

[[bin]]
name = "subway"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
blake2 = "0.10.6"
clap = { version = "4.1.1", features = ["derive"] }
enumflags2 = "0.7.5"
futures = "0.3.25"
hyper = "0.14.23"
log = "0.4.17"
moka = { version = "0.10.0", features = ["future"] }
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.92"
serde_yaml = "0.9.17"
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-datadog = { version = "0.7.0", features = ["reqwest-client"] }

jsonrpsee = { version = "0.16.0", path = "./vendor/jsonrpsee/jsonrpsee", features = ["full"] }
governor = { version = "0.5.1", path = "./vendor/governor/governor" }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
futures-util = "0.3.15"
jsonrpc-ws-server = { version = "18.0.0" }
jsonrpc-http-server = { version = "18.0.0" }
jsonrpc-pubsub = { version = "18.0.0" }

[[bench]]
name = "bench"
harness = false

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = "0.1.8"

[profile.release]
codegen-units = 1
lto = true
