[package]
name = "subway"
version = "0.1.0"
authors = ["Acala Developers <hello@acala.network>"]
repository = "https://github.com/AcalaNetwork/subway"
description = "Substrate JSON RPC gateway"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "subway"
path = "src/lib.rs"

[[bin]]
name = "subway"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
blake2 = "0.10.6"
chrono = "0.4.24"
clap = { version = "4.1.1", features = ["derive"] }
enumflags2 = "0.7.7"
futures = "0.3.25"
garde = { version = "0.18", features = ["full"] }
governor = "0.6.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1.3"
jsonrpsee = { version = "0.23", features = ["full"] }
moka = { version = "0.12", features = ["future"] }
opentelemetry = { version = "0.21.0" }
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "trace"] }
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.152"
serde_json = "1.0.92"
serde_yaml = "0.9.17"
substrate-prometheus-endpoint = "0.17.0"
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
futures-util = "0.3.15"
jsonrpc-http-server = { version = "18.0.0" }
jsonrpc-pubsub = { version = "18.0.0" }
jsonrpc-ws-server = { version = "18.0.0" }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false

[target.'cfg(tokio_unstable)'.dependencies]
console-subscriber = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
